--- a/css/style.css
+++ b/css/style.css
@@ -43,3 +43,67 @@ img {
   transform: scale(1.2);
   box-shadow: 0 25px 15px -5px;
 }
+
+@use postcss-cssnext;
+:root {
+  --min-size: 2px;
+  --max-size: 20px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+
+.backdrop {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(45deg, #6200ea, #d500f9);
+}
+
+.loader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dot {
+  background: white;
+  margin: 5px;
+  animation-name: loader;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+.dot:nth-child(1) {
+  animation-delay: 0.2s;
+}
+.dot:nth-child(2) {
+  animation-delay: 0.4s;
+}
+.dot:nth-child(3) {
+  animation-delay: 0.6s;
+}
+.dot:nth-child(4) {
+  animation-delay: 0.8s;
+}
+.dot:nth-child(5) {
+  animation-delay: 1s;
+}
+
+@keyframes loader {
+  from {
+    width: var(--min-size);
+    height: var(--min-size);
+    border-radius: calc(var(--min-size) / 2);
+  }
+  to {
+    width: var(--max-size);
+    height: var(--max-size);
+    border-radius: calc(var(--max-size) / 2);
+  }
+}
