--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ img {
   cursor:default;
 }
 
-#load div {
+.load div {
   position:absolute;
   width:20px;
   height:36px;
@@ -76,37 +76,37 @@ img {
   color:#35C4F0;
 }
 
-#load div:nth-child(2) {
+.load div:nth-child(2) {
   animation-delay:0.2s;
   -o-animation-delay:0.2s;
   -moz-animation-delay:0.2s;
   -webkit-animation-delay:0.2s;
 }
-#load div:nth-child(3) {
+.load div:nth-child(3) {
   animation-delay:0.4s;
   -o-animation-delay:0.4s;
   -webkit-animation-delay:0.4s;
   -webkit-animation-delay:0.4s;
 }
-#load div:nth-child(4) {
+.load div:nth-child(4) {
   animation-delay:0.6s;
   -o-animation-delay:0.6s;
   -moz-animation-delay:0.6s;
   -webkit-animation-delay:0.6s;
 }
-#load div:nth-child(5) {
+.load div:nth-child(5) {
   animation-delay:0.8s;
   -o-animation-delay:0.8s;
   -moz-animation-delay:0.8s;
   -webkit-animation-delay:0.8s;
 }
-#load div:nth-child(6) {
+.load div:nth-child(6) {
   animation-delay:1s;
   -o-animation-delay:1s;
   -moz-animation-delay:1s;
   -webkit-animation-delay:1s;
 }
-#load div:nth-child(7) {
+.load div:nth-child(7) {
   animation-delay:1.2s;
   -o-animation-delay:1.2s;
   -moz-animation-delay:1.2s;
